--- a/environment.yml
+++ b/environment.yml
@@ -11,3 +11,11 @@ dependencies:
 
   - pip:
     - openai
+    - google-cloud-aiplatform
+    - google-cloud-gemini
+    - google-generative-ai
+    - torch
+    - transformers
+    - 
+    
+
