--- a/environment.yml
+++ b/environment.yml
@@ -7,13 +7,16 @@ dependencies:
   - python=3.8
   - pandas
   - numpy
+  - ipykernel
   - pip
 
   - pip:
     - openai
     - google-cloud-aiplatform
     - google-cloud-gemini
-    - google-generative-ai
+    - google.generativeai
     - torch
     - transformers
     - kaggle
+    - matplotlib
+    - genai
